name:               th-path
version:            0.30
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Template Haskell
author:             David Fox
copyright:          (c) David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/th-path
bug-reports:        https://github.com/seereason/th-path/issues
stability:          experimental
synopsis:           A library to facilitate the creation of lenses into a data structure.
description:
  The th-path package traverses the subtype graph and creates
  instances of 'Path'.  These allow you to describe, retrieve, and
  update deeply nested values in a data type.  It also has a
  'View' mechanism which transforms the appearance of a value
  using any @Iso@ lens.

flag local-th-typegraph
  Description: Build with local source files of th-typegraph and th-context
  Default: False
  Manual: True

library
  hs-source-dirs: .
  if !impl(ghcjs)
    Default-Extensions: TemplateHaskell
  build-depends:
    applicative-extras,
    atp-haskell,
    base >= 4.8 && < 5,
    base-compat,
    containers,
    data-default,
    directory,
    extra,
    haskell-src-exts,
    lens,
    ListLike,
    mtl,
    mtl-unleashed >= 0.5,
    parsec,
    safe,
    safecopy,
    set-extra,
    syb,
    template-haskell >= 2.10,
    text,
    th-desugar,
    th-kinds-fork,
    th-lift,
    th-orphans,
    userid,
    web-routes,
    web-routes-th
  ghc-options:      -Wall -O2
  exposed-modules:
    Language.Haskell.TH.Path.Core
    Language.Haskell.TH.Path.Order
    Language.Haskell.TH.Path.View
  if !impl(ghcjs)
    exposed-modules:
      Language.Haskell.TH.Path.Common
      Language.Haskell.TH.Path.Decs
      Language.Haskell.TH.Path.Decs.PathStart
      Language.Haskell.TH.Path.Graph
      Language.Haskell.TH.Path.Instances
      Language.Haskell.TH.Path.Traverse
  default-language: Haskell2010
  if flag (local-th-typegraph)
    Hs-Source-Dirs: ../th-typegraph, ../th-context, ../image-cache
    Build-Depends: pretty, acid-state, bytestring, process, binary, exceptions, process-extras, aeson, pureMD5, filemanip-extra, hslogger, Unixutils, HaTeX, utf8-string, regex-compat, transformers, unix, network-uri
    Exposed-Modules:
      -- th-context
      Data.Logic.ATP.TH
      Language.Haskell.TH.Context
      -- th-typegraph
      Language.Haskell.TH.TypeGraph.Arity
      Language.Haskell.TH.TypeGraph.Edges
      Language.Haskell.TH.TypeGraph.Expand
      Language.Haskell.TH.TypeGraph.Free
      Language.Haskell.TH.TypeGraph.Lens
      Language.Haskell.TH.TypeGraph.Prelude
      Language.Haskell.TH.TypeGraph.Shape
      Language.Haskell.TH.TypeGraph.Stack
      Language.Haskell.TH.TypeGraph.TypeGraph
      Language.Haskell.TH.TypeGraph.TypeInfo
      Language.Haskell.TH.TypeGraph.Vertex
      Appraisal.Cache
      Appraisal.Exif
      Appraisal.File
      Appraisal.Image
      Appraisal.ImageCache
      Appraisal.ImageFile
      Appraisal.Utils.ErrorWithIO
  else
    Build-Depends:
      th-context >= 0.23.1,
      th-typegraph >= 0.35

-- test-suite th-path-tests
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test
--   main-is:          Tests.hs
--   build-depends:    array, base, bytestring, containers, deepseq, ghc-prim,
--                     hspec, hspec-core, mtl, syb, template-haskell, text,
--                     th-context, th-desugar, th-orphans, th-reify-many, th-typegraph >= 0.20
--   default-language: Haskell2010

test-suite th-path-tests
  Buildable: True
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Tests.hs
  ghc-options:      -Wall -O2
  if !impl(ghcjs)
    Default-Extensions: TemplateHaskell
  build-depends:
    aeson,
    applicative-extras,
    base,
    base-compat,
    binary,
    bytestring,
    containers,
    data-default,
    Diff,
    directory,
    file-embed,
    filemanip,
    filemanip-extra >= 0.4,
    filepath,
    groom,
    haskell-src-exts,
    HaTeX,
    HUnit,
    jmacro,
    json,
    lens,
    ListLike,
    mtl,
    mtl-unleashed,
    network-uri,
    pandoc,
    pretty,
    random,
    regex-compat,
    safe,
    set-extra,
    sr-extra,
    sr-revision,
    syb,
    template-haskell,
    text,
    th-desugar,
    th-kinds-fork,
    th-lift,
    th-path,
    th-orphans,
    transformers,
    unix,
    userid,
    utf8-string,
    uuid,
    uuid-orphans,
    uuid-types
  other-modules:
    Tests.Data
  default-language: Haskell2010
  if flag(local-th-typegraph)
    build-depends: process-extras, pureMD5, Unixutils, exceptions, process, hslogger, atp-haskell, data-default, web-routes-th, safecopy
  else
    Build-Depends: image-cache, th-context, th-typegraph, th-path

source-repository head
  type:     git
  location: git://github.com/seereason/th-path.git
