name:               th-path
version:            0.37
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Template Haskell
author:             David Fox
copyright:          (c) David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/th-path
bug-reports:        https://github.com/seereason/th-path/issues
stability:          experimental
synopsis:           A library to facilitate the creation of lenses into a data structure.
description:
  The th-path package traverses the subtype graph and creates
  instances of 'Path'.  These allow you to describe, retrieve, and
  update deeply nested values in a data type.  It also has a
  'View' mechanism which transforms the appearance of a value
  using any @Iso@ lens.

library
  default-language: Haskell2010
  hs-source-dirs: .
  if !impl(ghcjs)
    Default-Extensions: TemplateHaskell
  build-depends:
    aeson,
    applicative-extras,
    atp-haskell,
    base >= 4.8 && < 5,
    base-compat,
    containers,
    data-default,
    directory,
    extra,
    haskell-src-exts,
    lens >= 4.13.1,
    ListLike,
    mtl,
    mtl-unleashed >= 0.5,
    parsec,
    pretty,
    safe,
    safecopy,
    set-extra,
    sr-order,
    syb,
    template-haskell >= 2.10,
    text,
    th-context,
    th-desugar,
    th-kinds-fork,
    th-lift,
    th-lift-instances,
    th-orphans,
    userid,
    uuid-types,
    uuid-orphans >= 1.4,
    web-routes,
    web-routes-th
  ghc-options:      -Wall -O2
  exposed-modules:
    Language.Haskell.TH.Path
    Language.Haskell.TH.Path.Common
    Language.Haskell.TH.Path.Core
    Language.Haskell.TH.Path.Files
    Language.Haskell.TH.Path.Instances
    Language.Haskell.TH.Path.View
    Language.Haskell.TH.Path.Prelude
    Language.Haskell.TH.Path.Shape
    Language.Haskell.TH.Path.Vertex
    Language.Haskell.TH.Path.TypeInfo
    Language.Haskell.TH.Path.Edges
    Language.Haskell.TH.Path.Stack
    Language.Haskell.TH.Path.TypeGraph
    Language.Haskell.TH.Path.Lens
    Language.Haskell.TH.Path.Arity
    Language.Haskell.TH.Path.Free
    Language.Haskell.TH.Path.ATP
    Language.Haskell.TH.Path.Context
  if !impl(ghcjs)
    exposed-modules:
      Language.Haskell.TH.Path.Decs
      Language.Haskell.TH.Path.Graph
      Language.Haskell.TH.Path.Peek
      Language.Haskell.TH.Path.Traverse

-- test-suite th-path-tests
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test
--   main-is:          Tests.hs
--   build-depends:    array, base, bytestring, containers, deepseq, ghc-prim,
--                     hspec, hspec-core, mtl, syb, template-haskell, text,
--                     th-context, th-desugar, th-orphans, th-reify-many, th-typegraph >= 0.20
--   default-language: Haskell2010

test-suite th-path-tests
  Buildable: True
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Tests.hs
  other-modules:
    Tests.Core
    Tests.Data
    Tests.Instances
    Tests.MakePath
    Tests.Report
  ghc-options:      -Wall -O2
  if !impl(ghcjs)
    Default-Extensions: TemplateHaskell
  build-depends:
    aeson,
    applicative-extras,
    appraisalscribe-data,
    base,
    base-compat,
    binary,
    bytestring,
    containers,
    data-default,
    Diff,
    directory,
    file-embed,
    filemanip,
    filemanip-extra >= 0.4,
    filepath,
    groom,
    haskell-src-exts,
    HaTeX,
    HUnit,
    image-cache,
    jmacro,
    json,
    lens >= 4.13.1,
    ListLike,
    mtl,
    mtl-unleashed,
    network-uri,
    pandoc,
    pretty,
    random,
    regex-compat,
    safe,
    safecopy,
    set-extra,
    sr-extra,
    sr-order,
    sr-revision,
    syb,
    template-haskell,
    text,
    th-desugar,
    th-kinds-fork,
    th-lift,
    th-lift-instances,
    th-path,
    th-orphans,
    transformers,
    unix,
    userid,
    utf8-string,
    uuid,
    uuid-orphans >= 1.4,
    uuid-types,
    web-routes,
    web-routes-th
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/seereason/th-path.git
